# iros

./: .envrc  .markdownlint.json  CMakeLists.txt  CMakePresets.json  abort_8cpp.html  abs_8h.html  abs_8h_source.html  abs__diff_8h.html  abs__diff_8h_source.html  abs__unsigned_8h.html  abs__unsigned_8h_source.html  acpi_8cpp.html  acpi_8h.html  acpi_8h_source.html  add__member__get_8h.html  add__member__get_8h_source.html  address__space_8h.html  address__space_8h_source.html  addressof_8h.html  addressof_8h_source.html  adjacent_8h.html  adjacent_8h_source.html  adjacent__find_8h.html  adjacent__find_8h_source.html  adjacent__transform_8h.html  adjacent__transform_8h_source.html  adjacent__transform__view_8h.html  adjacent__transform__view_8h.js  adjacent__transform__view_8h_source.html  adjacent__view_8h.html  adjacent__view_8h_source.html  advance_8h.html  advance_8h_source.html  algorithm_2iota_8h.html  algorithm_2iota_8h_source.html  algorithm_2reverse_8h.html  algorithm_2reverse_8h_source.html  algorithm_8h.html  algorithm_8h.js  algorithm_8h_source.html  (+11783 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docs.yml  iros.yml  lint.yml  linux.yml
docs/: build.md
docs/di/: ipc.md
iris/: CMakeLists.txt
iris/arch/x86/amd64/boot/: init.cpp
iris/arch/x86/amd64/hw/: sb16.cpp
iris/arch/x86/amd64/mm/: map_physical_address.cpp
iris/boot/: init.cpp
iris/fs/: inode.cpp
iris/include/iris/arch/x86/amd64/hw/: sb16.h
iris/include/iris/mm/: map_physical_address.h
iris/include/iris/uapi/: syscall.h
iris/uapi/: syscall.cpp
libs/ccpp/include/: fcntl.h  unistd.h
libs/ccpp/include/sys/: stat.h  types.h
libs/di/: CMakeLists.txt
libs/di/include/di/execution/io/: ipc_binary.h
libs/di/include/di/meta/: util.h
libs/di/include/di/util/: named_arguments.h
libs/di/include/di/vocab/variant/: variant.h
libs/di/tests/: test_ipc_binary.cpp  test_util.cpp
libs/diusaudio/: CMakeLists.txt  sink.cpp
libs/diusaudio/formats/: wav.cpp
libs/diusaudio/include/diusaudio/: frame.h  frame_info.h  sink.h
libs/diusaudio/include/diusaudio/formats/: wav.h
libs/diusaudio/iros/: iros_audio.cpp  iros_audio.h
libs/diusaudio/linux/: pipewire.cpp  pipewire.h
libs/diusaudio/tests/: CMakeLists.txt
libs/diusgfx/: CMakeLists.txt  painter.cpp
libs/diusgfx/include/diusgfx/: bitmap.h  color.h  painter.h  point.h  rect.h  size2d.h
libs/diusgfx/tests/: CMakeLists.txt  test_color.cpp  test_point.cpp  test_rect.cpp  test_size2d.cpp
meta/: make-iris-limine-image.sh  run-command-on-iris.sh  run-iris.sh
meta/cmake/: CMakeToolchain_Iros_Clang_x86_64.txt  doxygen.cmake  iris_commands.cmake
meta/docker/: Dockerfile
meta/toolchain/binutils/: 0001-Add-Iros-support-for-binutils.patch  build.sh
meta/toolchain/gcc/: 0001-Add-GCC-driver-for-Iros.patch  0002-Add-libgcc-support-for-Iros.patch  0003-Support-shared-libraries-on-Iros.patch  0004-Add-libstdc-support-for-Iros.patch  build.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  (+130 more)
userland/audiotest/: CMakeLists.txt  audio_test.cpp
userland/core/: cp.cpp  ls.cpp
userland/gfxtest/: CMakeLists.txt  gfx_test.cpp
userland/package_manager/: config.cpp  config.h  package_manager.h
userland/shell/: sh.cpp
userland/tools/: generate_presets.cpp  initrd.cpp
